Дорисовала третью секцию (преимущества за 1 минуту в видео); Улучшила адаптив, добавила медиа-запрос для ширины экрана 1420px. Выглядит здорово:)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <div class="header__bar">
             <div class="container bar">
                 <div class="row">
@@ -58,11 +58,11 @@
             <h4 class="header__subtitle">по поставкам хлебобулочных и кондитерских изделий от крупнейшего хлебозавода в МО</h4>
 
             <div class="row">
-                <div class="col-xl-8 col-md-12 header__main-image">
+                <div class="col-lg-8 col-md-12 header__main-image">
                     <img src="img/header-main-img.png" alt="Балашиха хлеб">
                 </div>
 
-                <div class="col-xl-4 col-md-12">
+                <div class="col-lg-4 col-md-12">
                     <div class="offer">
                         <p class="offer__title">Получите персональное коммерческое предложение</p>
 
@@ -112,17 +112,27 @@
     </section>
     <!-- /.our-foto -->
 
-    <section class="section advantages-in-video">
+    <section class="section plus-in-video">
         <div class="container">
             <div class="section__title">Главные преимущества за 1 минуту</div>
             <div class="section__subtitle-image"></div>
             
-            <div class="row"></div>
+            <div class="row">
+                <div class="plus-in-video__left-side col-xl-4 col-lg-5">
+                    <img src="/img/advantages-baker.png" alt="Пекарь">
+                </div>
+                <!-- /.plus-in-video__left-side col-lg-4 -->
+
+                <div class="plus-in-video__video col-xl-8 col-lg-7">
+                    <img src="/img/video-advantages.png" alt="Наши преимущества за 1 минуту">
+                </div>
+                <!-- /.plus-in-video__video col-lg-7 -->
+            </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
     </section>
-    <!-- /.advantages-in-video -->
+    <!-- /.plus-in-video -->
 </body>
 
 </html>
