Сделала блок Наши преимущества адаптивно; Сделала адаптив для колосков справа от оффера; Исправила косяки адаптива бара.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 <body>
 
     <header class="header">
-        <div class="header__bar">
-            <div class="container bar">
+        <!-- Бар - полоска наверху с логотипом, контактами -->
+        <div class="bar">
+            <div class="container">
                 <div class="row">
 
                     <div class="bar__logo col-md-3 col-sm-3 col-5">
@@ -52,6 +53,7 @@
         </div>
         <!-- /.header__bar -->
 
+        <!-- Первый экран, форма с коммерческим предложением -->
         <div class="container">
 
             <h1 class="header__title">Уникальные коммерческие условия</h1>
@@ -92,6 +94,7 @@
     </header>
     <!-- /header -->
 
+    <!-- Фотографии нашего завода, слайдер -->
     <section class="section our-foto">
         <div class="container">
             <h3 class="section__title">Фотографии нашего завода</h3>
@@ -112,6 +115,7 @@
     </section>
     <!-- /.our-foto -->
 
+    <!-- Наши преимущества в видео -->
     <section class="section plus-in-video">
         <div class="container">
             <div class="section__title">Главные преимущества за 1 минуту</div>
@@ -133,6 +137,57 @@
         <!-- /.container -->
     </section>
     <!-- /.plus-in-video -->
+
+    <!-- Список-лист Наши преимущества -->
+    <section class="advantages section">
+        <div class="container">
+            <h3 class="section__title">Наши преимущества</h3>
+            <div class="section__subtitle-image"></div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-1.png" alt="Честность" class="advantages__icon">
+                        <h5 class="advantages__title">Честность</h5>
+                        <p class="advantages__text">- в мыслях, суждениях и делах – это наше кредо. Мы считаем своим долгом поддерживать надежность и прямоту во взаимоотношениях с клиентами и партнерами по бизнесу.</p>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-2.png" alt="Новаторство" class="advantages__icon">
+                        <h5 class="advantages__title">Новаторство</h5>
+                        <p class="advantages__text">- основа деятельности компании. Мы внедряем в производство новейшие технологии, ищем нестандартные пути и эффективные решения, и достигаем успеха.</p>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-3.png" alt="Друзья и партнеры" class="advantages__icon">
+                        <h5 class="advantages__title">Друзья и партнеры </h5>
+                        <p class="advantages__text">Недорогой, так называемый, «социальный», хлеб также отличается высоким качеством. Его с удовольствием едят защитники нашего Отечества самых разных родов войск.</p>
+                    </div>
+                </div>
+                <!-- /.col-md-6 -->
+
+                <div class="col-md-6">
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-4.png" alt="Профессионализм" class="advantages__icon">
+                        <h5 class="advantages__title">Профессионализм</h5>
+                        <p class="advantages__text">в нашем понимании - это не только доскональное знание всех тонкостей любимой работы, но и непрерывное движение вперед, к новым знаниям и достижениям.</p>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-5.png" alt="Уникальные технологии" class="advantages__icon">
+                        <h5 class="advantages__title">Уникальные технологии</h5>
+                        <p class="advantages__text">Несмотря на свои уникальные качества, этот хлеб является «линейным», то есть его цена ненамного выше цены обыкновенных ржано-пшеничных сортов типа «Дарницкого».</p>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="img/icon-circle-6.png" alt="Социальные программы" class="advantages__icon">
+                        <h5 class="advantages__title">Социальные программы</h5>
+                        <p class="advantages__text">Мы не можем пройти мимо тех, кому нужна помощь. Мимо тех, кто в силу ряда обстоятельств много лишен. Потому мы помогаем Ногинскому Благочинию, Богоявленскому собору.</p>
+                    </div>
+                </div>
+                <!-- /.col-md-6 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.advantages-list -->
 </body>
 
 </html>
