Сделала блок Каталог продукции, он сразу адаптивный получился.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,61 @@
         <!-- /.container -->
     </section>
     <!-- /.advantages-list -->
+
+    <section class="section catalog">
+        <div class="container">
+            <h3 class="section__title">Каталог продукции</h3>
+            <div class="section__subtitle-image"></div>
+        
+            <div class="row">
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-1.png" alt="Хлеб" class="product__image">
+                    <h5 class="product__name">Хлеб</h5>
+                    <p class="product__text">Хлеб всему голова. Древние египтяне высоко чтили хлеб. На письме он обозначался тем же иероглифом, что и солнце — круг, по центру которого точка.</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-2.png" alt="Хлебушки" class="product__image">
+                    <h5 class="product__name">Хлебушки</h5>
+                    <p class="product__text">Русские пекли хлеб, а немцы сдобные булки. Со временем словом «булка» стали определять любой хлеб и выпечку. Мы и сегодня говорим: «булка хлеба».</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-3.png" alt="Булочки" class="product__image">
+                    <h5 class="product__name">Булочки</h5>
+                    <p class="product__text">Булочные изделия (изделия массой менее 500 г) - это изделия плетеные, в виде батонов, булок, булочек, калачей, ватрушек, пирожков, пышек, плюшек, рогаликов и пр.</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-4.png" alt="Кондитерские" class="product__image">
+                    <h5 class="product__name">Кондитерские</h5>
+                    <p class="product__text">Характеризуются высокой пищевой и энергетической ценностью. Низкая влажность этих изделий позволяет хранить их длительное время.</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-5.png" alt="Хлебцы" class="product__image">
+                    <h5 class="product__name">Хлебцы</h5>
+                    <p class="product__text">Полезные хлебцы изготавливаются из цельного зерна и отрубей. В хлебцы добавляют семена кунжута, тыквы, подсолнуха, а также сухофрукты.</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+                <div class="catalog__card product col-12 col-sm-6 col-lg-4">
+                    <img src="/img/catalog-6.png" alt="Мюсли" class="product__image">
+                    <h5 class="product__name">Мюсли</h5>
+                    <p class="product__text">Мюсли – продукт для здорового питания. Обращайте внимание на наличие в составе сахара и пальмового масла, способных снизить полезные свойства мюсли.</p>
+                    <button class="product__button">Посмотреть</button>
+                </div>
+                <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section catalog -->
 </body>
 
 </html>
