Добавила секцию, в которой много картинок с хлебом, адаптировала. Картинки пообрезала

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
     </section>
     <!-- /.advantages-list -->
 
+    <!-- Каталог продукции -->
     <section class="section catalog">
         <div class="container">
             <h3 class="section__title">Каталог продукции</h3>
@@ -242,7 +243,28 @@
         </div>
         <!-- /.container -->
     </section>
-    <!-- /.section catalog -->
+    <!-- /.section.catalog -->
+
+    <!-- Полоска с фотографиями хлеба (просто для красоты) -->
+    <section class="many-bread">
+        <div class="many-bread__row">
+            <div class="many-bread__item"><img src="/img/many-bread/many-1.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-2.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-3.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-4.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-5.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-6.jpg" alt=""></div>
+        </div>
+        <div class="many-bread__row">
+            <div class="many-bread__item"><img src="/img/many-bread/many-7.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-8.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-9.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-10.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-11.jpg" alt=""></div>
+            <div class="many-bread__item"><img src="/img/many-bread/many-12.jpg" alt=""></div>
+        </div>
+    </section>
+    <!-- /.many-bread -->
 </body>
 
 </html>
