Сделала блок О Балашиха хлеб (видео), видео еще не вставила, пока там просто картинка

--- a/index.html
+++ b/index.html
@@ -245,6 +245,24 @@
     </section>
     <!-- /.section.catalog -->
 
+    <!-- О Балашиха хлеб -->
+    <section class="section about">
+        <div class="container">
+            <h3 class="section__title">О «Балашиха хлеб»</h3>
+            <div class="section__subtitle-image"></div>
+
+            <p class="about__text">Мы изготавливаем хлеб на ОАО «Балашиха Хлеб». Это одно из крупнейших предприятий пищевой промышленности Московского региона, входящее в тройку ведущих производителей хлебобулочной продукции. Мощности комбината изо дня в день модернизируются, позволяя сохранять неизменно высокий уровень качества. Наше оборудование – из России, Чехии, Германии, Голландии и Франции. Наша продукция – наша гордость, которая давно стала визитной карточкой края.</p>
+            <p class="about__text"><b>А это – более 100 видов хлебобулочных изделий, которые ежедневно попадают на стол наших покупателей.</b></p>
+            <p class="about__text">На нашем комбинате трудится более 700 человек. Это не просто люди, которые  приходят сюда из-за стабильной зарплаты, это – хлебопеки, которые приходят сюда по зову сердца. А потому наш хлеб не только качественный и вкусный, но ещё и изготавливается с любовью.</p>
+
+            <div class="about__video">
+                <img src="/img/about-video.png" alt="Видео о нас">
+            </div>
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section.about -->
+
     <!-- Полоска с фотографиями хлеба (просто для красоты) -->
     <section class="many-bread">
         <div class="many-bread__row">
