Сверстала футер, кнопки лайков из соцсетей вставила в виде картинки

--- a/index.html
+++ b/index.html
@@ -283,6 +283,17 @@
         </div>
     </section>
     <!-- /.many-bread -->
+
+    <!-- Подвал страницы -->
+    <footer>
+        <div class="container">
+            © 1994-2014 «Балашиха Хлеб», ИНН: 7708757552, ОГРН: 1127746150080,<br>
+            Адрес: г. Москва, ул. Неверовского, д. 9<br>
+            <img src="/img/footer-socials.png" alt="Лайки в социальных сетях">
+        </div>
+        <!-- /.container -->
+    </footer>
+    <!-- /footer -->
 </body>
 
 </html>
