Добавила блок с картой и сделала ее адаптивной (карта в виде картинки).

--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
     </section>
     <!-- /.many-bread -->
 
+    <!-- Карта -->
+    <section class="map">
+        <img src="/img/map.png" alt="Карта">
+    </section>
+    <!-- /.map -->
+
     <!-- Подвал страницы -->
     <footer>
         <div class="container">
