Переделала на Bootstrap секцию, где много фотографий хлеба

--- a/index.html
+++ b/index.html
@@ -298,25 +298,36 @@
     <!-- /.section middle-offer -->
     
     <!-- Полоска с фотографиями хлеба (просто для красоты) -->
-    <section class="many-bread">
-        <div class="many-bread__row">
-            <div class="many-bread__item"><img src="/img/many-bread/many-1.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-2.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-3.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-4.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-5.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-6.jpg" alt=""></div>
+    <section class="many-bread container-fluid p-0">
+        <div class="row m-0">
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-1.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-2.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-3.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-4.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-5.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-6.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-7.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-8.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-9.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-10.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-11.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-12.jpg" alt=""></div>
+            <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
         </div>
-        <div class="many-bread__row">
-            <div class="many-bread__item"><img src="/img/many-bread/many-7.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-8.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-9.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-10.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-11.jpg" alt=""></div>
-            <div class="many-bread__item"><img src="/img/many-bread/many-12.jpg" alt=""></div>
-        </div>
+        <!-- /.row m-0 -->
     </section>
-    <!-- /.many-bread -->
+    <!-- /.many-bread container-fluid -->
 
     <!-- Карта -->
     <section class="map">
