--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <meta name="author" content="Вера Перелыгина"> -->
 
     <!-- Иконка, которая будет на вкладке в браузере -->
-    <link rel="icon" href="/img/favicon.png">
+    <link rel="icon" href="img/favicon.png">
     <title>Балашихинский хлеб</title>
 
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="our-foto__slider col-xl-7 col-lg-6">
                     <div class="shadow-bottom">
-                        <img src="/img/slider.png" alt="">
+                        <img src="img/slider.png" alt="">
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6">
@@ -127,13 +127,13 @@
             
             <div class="row">
                 <div class="plus-in-video__left-side col-xl-4 col-lg-5">
-                    <img src="/img/advantages-baker.png" alt="Пекарь">
+                    <img src="img/advantages-baker.png" alt="Пекарь">
                 </div>
                 <!-- /.plus-in-video__left-side col-lg-4 -->
 
                 <div class="plus-in-video__video col-xl-8 col-lg-7">
                         <div class="shadow-bottom">
-                            <img src="/img/video-advantages.png" alt="Наши преимущества за 1 минуту">
+                            <img src="img/video-advantages.png" alt="Наши преимущества за 1 минуту">
                         </div>
                 </div>
                 <!-- /.plus-in-video__video col-lg-7 -->
@@ -203,42 +203,42 @@
         
             <div class="row">
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-1.png" alt="Хлеб" class="product__image">
+                    <img src="img/catalog-1.png" alt="Хлеб" class="product__image">
                     <h5 class="product__name">Хлеб</h5>
                     <p class="product__text">Хлеб всему голова. Древние египтяне высоко чтили хлеб. На письме он обозначался тем же иероглифом, что и солнце — круг, по центру которого точка.</p>
                     <button class="product__button">Посмотреть</button>
                 </div>
                 <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-2.png" alt="Хлебушки" class="product__image">
+                    <img src="img/catalog-2.png" alt="Хлебушки" class="product__image">
                     <h5 class="product__name">Хлебушки</h5>
                     <p class="product__text">Русские пекли хлеб, а немцы сдобные булки. Со временем словом «булка» стали определять любой хлеб и выпечку. Мы и сегодня говорим: «булка хлеба».</p>
                     <button class="product__button">Посмотреть</button>
                 </div>
                 <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-3.png" alt="Булочки" class="product__image">
+                    <img src="img/catalog-3.png" alt="Булочки" class="product__image">
                     <h5 class="product__name">Булочки</h5>
                     <p class="product__text">Булочные изделия (изделия массой менее 500 г) - это изделия плетеные, в виде батонов, булок, булочек, калачей, ватрушек, пирожков, пышек, плюшек, рогаликов и пр.</p>
                     <button class="product__button">Посмотреть</button>
                 </div>
                 <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-4.png" alt="Кондитерские" class="product__image">
+                    <img src="img/catalog-4.png" alt="Кондитерские" class="product__image">
                     <h5 class="product__name">Кондитерские</h5>
                     <p class="product__text">Характеризуются высокой пищевой и энергетической ценностью. Низкая влажность этих изделий позволяет хранить их длительное время.</p>
                     <button class="product__button">Посмотреть</button>
                 </div>
                 <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-5.png" alt="Хлебцы" class="product__image">
+                    <img src="img/catalog-5.png" alt="Хлебцы" class="product__image">
                     <h5 class="product__name">Хлебцы</h5>
                     <p class="product__text">Полезные хлебцы изготавливаются из цельного зерна и отрубей. В хлебцы добавляют семена кунжута, тыквы, подсолнуха, а также сухофрукты.</p>
                     <button class="product__button">Посмотреть</button>
                 </div>
                 <!-- /.catalog__card.product.col-12.col-sm-6.col-lg-4 -->
                 <div class="catalog__card product col-12 col-sm-6 col-lg-4">
-                    <img src="/img/catalog-6.png" alt="Мюсли" class="product__image">
+                    <img src="img/catalog-6.png" alt="Мюсли" class="product__image">
                     <h5 class="product__name">Мюсли</h5>
                     <p class="product__text">Мюсли – продукт для здорового питания. Обращайте внимание на наличие в составе сахара и пальмового масла, способных снизить полезные свойства мюсли.</p>
                     <button class="product__button">Посмотреть</button>
@@ -263,7 +263,7 @@
 
             <div class="about__video">
                 <div class="shadow-bottom">
-                    <img src="/img/about-video.png" alt="Видео о нас">
+                    <img src="img/about-video.png" alt="Видео о нас">
                 </div>
             </div>
         </div>
@@ -300,29 +300,29 @@
     <!-- Полоска с фотографиями хлеба (просто для красоты) -->
     <section class="many-bread container-fluid p-0">
         <div class="row m-0">
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-1.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-1.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-2.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-2.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-3.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-3.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-4.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-4.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-5.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-5.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-6.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-6.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-7.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-7.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-8.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-8.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-9.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-9.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-10.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-10.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-11.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-11.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
-            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="/img/many-bread/many-12.jpg" alt=""></div>
+            <div class="col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item"><img src="img/many-bread/many-12.jpg" alt=""></div>
             <!-- /.col-xl-2 col-3 col-md-3 col-4 p-0 many-bread__item -->
         </div>
         <!-- /.row m-0 -->
@@ -331,7 +331,7 @@
 
     <!-- Карта -->
     <section class="map">
-        <img src="/img/map.png" alt="Карта">
+        <img src="img/map.png" alt="Карта">
     </section>
     <!-- /.map -->
 
@@ -340,7 +340,7 @@
         <div class="container">
             © 1994-2014 «Балашиха Хлеб», ИНН: 7708757552, ОГРН: 1127746150080,<br>
             Адрес: г. Москва, ул. Неверовского, д. 9<br>
-            <img src="/img/footer-socials.png" alt="Лайки в социальных сетях">
+            <img src="img/footer-socials.png" alt="Лайки в социальных сетях">
         </div>
         <!-- /.container -->
     </footer>
