--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="icon" href="img/favicon.png">
     <title>Балашихинский хлеб</title>
 
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
-
     <!-- Шрифты Roboto -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,500,500i,700,900&amp;subset=cyrillic" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
 
@@ -38,7 +38,7 @@
                     </div>
                     
                     <div class="col-md-4 col-sm-4 col-7 call-me">
-                        <a href="+74957771100" class="call-me__phone">8 (495) <span class="call-me__phone_big">777-11-00</span></a>
+                        <a href="tel:+74957771100" class="call-me__phone">8 (495) <span class="call-me__phone_big">777-11-00</span></a>
 
                         <div class="call-me__request">
                             <img class="call-me__icon" src="img/icon-calling-phone.png" alt="Перезвоните мне">
