Добавила карту с балуном, как в макете

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=9c0254fc-b560-4b57-9b85-d3b36ca89ee5" type="text/javascript"></script>
     
 </head>
 <body>
@@ -330,9 +332,7 @@
     <!-- /.many-bread container-fluid -->
 
     <!-- Карта -->
-    <section class="map">
-        <img src="img/map.png" alt="Карта">
-    </section>
+    <section class="map" id="map"></section>
     <!-- /.map -->
 
     <!-- Подвал страницы -->
@@ -345,6 +345,8 @@
         <!-- /.container -->
     </footer>
     <!-- /footer -->
+
+    <script src="js/map.js"></script>
 </body>
 
 </html>
