--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 
+    <!-- Полифиллы для работы в Internet Explorer -->
+    <!-- [if lt IE]> -->
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.forEach%2CElement.prototype.classList%2CWebAnimations%2CNodeList.prototype.forEach"></script>
+    <!-- <![endif] -->
 </head>
 <body>
 
@@ -490,8 +494,8 @@
     <!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;loadByRequire=1&amp;apikey=9c0254fc-b560-4b57-9b85-d3b36ca89ee5"></script> -->
     
     <!-- Скрипты -->
-    <script defer src="js/functions.js"></script>
-    <script defer src="js/bundle.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/bundle.js"></script>
     <script defer src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <!-- slick slider -->
