--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
     <![if IE]>
     <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.forEach%2CElement.prototype.classList%2CWebAnimations%2CNodeList.prototype.forEach"></script>
     <![endif]>
-    
+    <!--[if IE]>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.forEach%2CElement.prototype.classList%2CWebAnimations%2CNodeList.prototype.forEach"></script>
+    <![endif]-->
     
 </head>
 <body>
@@ -494,7 +496,6 @@
 
     <!-- Скрипты -->
     <script src="js/functions.js"></script>
-    <![if IE]><script src="js/functions_ie.js"></script><![endif]>
     <script src="js/bundle.js"></script>
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -505,7 +506,6 @@
     <script src="https://vk.com/js/api/openapi.js?160"></script>
 
     <!-- Инициализация слайдера и кнопок Вконтакте-->
-    <!-- <script defer src="js/plugins.js"></script> -->
     <script>
         $(document).ready(function(){
             $('.our-foto .slider').slick({
